--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
 @import "./styles/base";
 @import "./components/Header/Header";
+@import "./components/Header/Logo/Logo";
+@import "./components/Header/NavBar/NavBar";
 @import "./components/Footer/Footer";
