--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
-@import "./styles/base";
-@import "./components/Header/Header";
-@import "./components/Header/Logo/Logo";
-@import "./components/Header/NavBar/NavBar";
-@import "./components/Footer/Footer";
+@import './styles/base';
+@import './components/Header/Header';
+@import './components/Header/Logo/Logo';
+@import './components/Header/NavBar/NavBar';
+@import './components/Header/PhoneHeader/PhoneHeader';
+@import './components/Header/CartHeader/CartHeader';
+@import './components/Footer/Footer';
