add Button Modal components

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,4 +4,5 @@
 @import './components/Header/NavBar/NavBar';
 @import './components/Header/PhoneHeader/PhoneHeader';
 @import './components/Header/CartHeader/CartHeader';
+@import './components/UI/Modal/Modal';
 @import './components/Footer/Footer';
