--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,13 +6,14 @@
     min-height: 28px;
     padding-top: 28px;
     padding-bottom: 41px;
+    // padding: 34px 0 33px;
   }
-  &__logo {
-  }
-  &__menu {
-  }
-  &__phone {
-  }
-  &__cart {
-  }
+  // &__logo {
+  // }
+  // &__menu {
+  // }
+  // &__phone {
+  // }
+  // &__cart {
+  // }
 }
