--- a/src/components/Header/PhoneHeader/PhoneHeader.scss
+++ b/src/components/Header/PhoneHeader/PhoneHeader.scss
@@ -3,6 +3,17 @@
   justify-content: center;
   align-items: flex-start;
   gap: 9px;
+  &:hover {
+    & .phone-header__icon {
+      background-color: $colorAccent;
+      path {
+        fill: $colorWrite;
+      }
+    }
+    & .phone-header__number {
+      color: $colorAccent;
+    }
+  }
   &__icon {
     display: flex;
     justify-content: center;
@@ -13,14 +24,9 @@
     path {
       transition: fill 0.5s ease 0s;
     }
-    &:hover {
-      background-color: $colorAccent;
-      path {
-        fill: $colorWrite;
-      }
-    }
   }
 
   &__number {
+    transition: color 0.5s ease 0s;
   }
 }
