--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,5 @@
 @import './components/Header/PhoneHeader/PhoneHeader';
 @import './components/Header/CartHeader/CartHeader';
 @import './components/UI/Modal/Modal';
+@import './components/PopupForm/PopupForm';
 @import './components/Footer/Footer';
