--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -51,11 +51,14 @@ body {
     background-color: $colorWrite;
     padding: 70px;
     width: 100%;
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: center;
-    align-items: stretch;
-    gap: 35px;
+    &:has(.submit) {
+      min-width: 600px;
+      display: flex;
+      flex-flow: column;
+      align-items: stretch;
+      gap: 35px;
+    }
+
     .lock & {
       visibility: visible;
     }
@@ -70,7 +73,6 @@ body {
     font-weight: 500;
     letter-spacing: 0.5px;
   }
-
   &__close {
     position: absolute;
     width: 20px;
@@ -83,7 +85,13 @@ body {
       transform: scale(1);
     }
   }
+  // & .submit {
+  //   & + .popup__wrapper {
+  //     max-width: 600px;
+  //   }
+  // }
 }
+
 //==========================================================================================================================================
 
 .popup_show {
