--- a/src/components/UI/Modal/Modal.scss
+++ b/src/components/UI/Modal/Modal.scss
@@ -55,7 +55,7 @@ body {
       min-width: 600px;
       display: flex;
       flex-flow: column;
-      align-items: stretch;
+      align-items: center;
       gap: 35px;
     }
 
