--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 @import './styles/base';
 @import './components/Header/Header';
-@import './components/Header/Logo/Logo';
-@import './components/Header/NavBar/NavBar';
+@import './components/Logo/Logo';
+@import './components/NavBar/NavBar';
 @import './components/Header/PhoneHeader/PhoneHeader';
 @import './components/Header/CartHeader/CartHeader';
 @import './components/UI/Modal/Modal';
