--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -95,12 +95,15 @@ $mobileSmall: 479.98px; //em(479.98)
     font-size: 17px;
     line-height: 138.9%; /* 23.613px */
     letter-spacing: 0.34px;
+    transition: color 0.5s ease 0s;
   }
   &--outline {
     background-color: transparent;
     border: 1px solid $colorAccent;
     &:hover {
-      background-color: transparent;
+      & .button__text {
+        color: $colorWrite;
+      }
     }
     & .button__text {
       color: $colorAccent;
