--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -111,3 +111,22 @@ $mobileSmall: 479.98px; //em(479.98)
   }
 }
 //==========================================================================================================================================
+.social {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+  &__icon {
+    svg path {
+      transition: all 0.5s ease 0s;
+    }
+    &:hover {
+      svg {
+        path {
+          fill: $colorAccent;
+        }
+      }
+    }
+  }
+}
