--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,4 +1,7 @@
 .header {
+  // position: fixed;
+  width: 100%;
+  z-index: 10;
   &__container {
     display: flex;
     justify-content: space-between;
