--- a/src/index.scss
+++ b/src/index.scss
@@ -7,3 +7,7 @@
 @import './components/UI/Modal/Modal';
 @import './components/PopupForm/PopupForm';
 @import './components/Footer/Footer';
+//==========================================================================================================================================
+// Home Main page
+@import './components/Main/Promo/Promo';
+@import './components/Main/HomeShop/HomeShop';
