--- a/src/components/Main/HomeShop/HomeShop.scss
+++ b/src/components/Main/HomeShop/HomeShop.scss
@@ -49,6 +49,7 @@
     font-size: 20px;
     font-weight: 500;
     letter-spacing: 0.4px;
+    text-transform: capitalize;
   }
   &__boby {
     width: 100%;
