add teams components

--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,5 @@
 // Home Main page
 @import './components/Main/Promo/Promo';
 @import './components/Main/HomeShop/HomeShop';
+@import './components/Main/Importance/Importance';
+@import './components/Main/Teams/Teams';
