--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -130,3 +130,17 @@ $mobileSmall: 479.98px; //em(479.98)
     }
   }
 }
+//==========================================================================================================================================
+.link {
+  padding-bottom: 5px;
+  border-bottom: 1px solid transparent;
+  transition: all 0.5s ease 0s;
+  &__text {
+    color: $colorAccent;
+    font-weight: 500;
+    letter-spacing: 0.34px;
+  }
+  &:hover {
+    border-bottom-color: $colorAccentBacg;
+  }
+}
