--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,7 @@
 @import './components/Main/HomeShop/HomeShop';
 @import './components/Main/Importance/Importance';
 @import './components/Main/Teams/Teams';
+
+// Shop page
+
+@import './components/Shop/ShopTitle/ShopTitle';
