--- a/src/index.scss
+++ b/src/index.scss
@@ -17,3 +17,5 @@
 // Shop page
 
 @import './components/Shop/ShopTitle/ShopTitle';
+@import './components/Shop/ShopProducts/ShopProducts';
+@import './components/Sort/Sort';
