--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -151,6 +151,11 @@ $mobileSmall: 479.98px; //em(479.98)
   line-height: 110%; /* 60.5px */
   letter-spacing: 1.1px;
 }
+.text {
+  font-weight: 500;
+  line-height: 140%;
+  letter-spacing: 0.34px;
+}
 //==========================================================================================================================================
 .breadcrumbs {
   &__active {
