--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -1,15 +1,15 @@
-.shop-title {
+.title {
   &__container {
     padding-top: 173px;
     padding-bottom: 84px;
   }
 
-  &__title {
+  &__size {
     &:not(:last-child) {
       padding-bottom: 26px;
     }
   }
 
-  &__breadcrumbs {
-  }
+  // &__breadcrumbs {
+  // }
 }
