--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -145,7 +145,7 @@ $mobileSmall: 479.98px; //em(479.98)
   }
 }
 //==========================================================================================================================================
-.title {
+.title-big {
   font-size: 55px;
   font-weight: 500;
   line-height: 110%; /* 60.5px */
@@ -158,6 +158,9 @@ $mobileSmall: 479.98px; //em(479.98)
 }
 //==========================================================================================================================================
 .breadcrumbs {
+  .text {
+    text-transform: capitalize;
+  }
   &__active {
     color: $colorGrey;
   }
@@ -170,3 +173,4 @@ $mobileSmall: 479.98px; //em(479.98)
   align-items: center;
   gap: 30px;
 }
+//==========================================================================================================================================
