--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -151,6 +151,12 @@ $mobileSmall: 479.98px; //em(479.98)
   line-height: 110%; /* 60.5px */
   letter-spacing: 1.1px;
 }
+.subtitle {
+  font-size: 25px;
+  font-weight: 500;
+  line-height: 140%; /* 35px */
+  letter-spacing: 0.5px;
+}
 .text {
   font-weight: 500;
   line-height: 140%;
