--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,32 +1,32 @@
-@use 'sass:math';
+@use "sass:math";
 @font-face {
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-display: swap;
-  src: url('/assets/fonts/raleway-regular.woff2') format('woff2'),
-    url('/assets/fonts/raleway-regular.woff2') format('woff');
+  src: url("/assets/fonts/raleway-regular.woff2") format("woff2"),
+    url("/assets/fonts/raleway-regular.woff2") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-display: swap;
-  src: url('/assets/fonts/raleway-medium.woff2') format('woff2'),
-    url('/assets/fonts/raleway-medium.woff2') format('woff');
+  src: url("/assets/fonts/raleway-medium.woff2") format("woff2"),
+    url("/assets/fonts/raleway-medium.woff2") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
-  font-family: 'Raleway';
+  font-family: "Raleway";
   font-display: swap;
-  src: url('/assets/fonts/raleway-bold.woff2') format('woff2'),
-    url('/assets/fonts/raleway-bold.woff') format('woff');
+  src: url("/assets/fonts/raleway-bold.woff2") format("woff2"),
+    url("/assets/fonts/raleway-bold.woff") format("woff");
   font-weight: 700;
   font-style: normal;
 }
 
 // variables
 
-$fontFamily: 'Raleway', sans-serif;
+$fontFamily: "Raleway", sans-serif;
 $fontSize: 17px;
 
 // Size
@@ -43,8 +43,8 @@ $tablet: 991.98px; //em(991.98)
 $mobile: 767.98px; //em(767.98)
 $mobileSmall: 479.98px; //em(479.98)
 //==========================================================================================================================================
-@import './color';
-@import './null';
+@import "./color";
+@import "./null";
 //==========================================================================================================================================
 
 .wrapper {
@@ -68,7 +68,7 @@ $mobileSmall: 479.98px; //em(479.98)
 
 //==========================================================================================================================================
 
-[class*='__container'] {
+[class*="__container"] {
   @if ($maxWidthContainer>0) {
     max-width: $maxWidthContainer + px;
     width: 100%;
@@ -156,6 +156,17 @@ $mobileSmall: 479.98px; //em(479.98)
   }
 }
 //==========================================================================================================================================
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 30vw;
+  color: $colorGreen;
+  font-size: 55px;
+  font-weight: 500;
+  line-height: 110%; /* 60.5px */
+  letter-spacing: 1.1px;
+}
 .title-big {
   font-size: 55px;
   font-weight: 500;
@@ -173,6 +184,12 @@ $mobileSmall: 479.98px; //em(479.98)
   font-weight: 500;
   line-height: 110%;
   letter-spacing: 0.8px;
+}
+.subtitle-h3 {
+  font-size: 25px;
+  font-weight: 500;
+  line-height: 140%; /* 28px */
+  letter-spacing: 0.5px;
 }
 .subtitle-h4 {
   font-size: 20px;
