--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -8,7 +8,10 @@
   &__subtitle {
   }
 
-  &__product {
+  &__inner {
+    display: grid;
+    gap: 40px;
+    justify-items: center;
   }
 
   &__control {
@@ -96,6 +99,18 @@
   &__inner {
     display: grid;
     gap: 10px;
-    justify-items: center;
+    justify-items: start;
+  }
+  &__item {
+    max-width: 989px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 24px;
+    img {
+      width: 100%;
+      max-width: 137px;
+    }
   }
 }
