--- a/src/components/Sort/Sort.scss
+++ b/src/components/Sort/Sort.scss
@@ -11,7 +11,12 @@
   }
 
   &__item {
-    padding: 19px 65px;
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 19px 0;
+    // padding: 19px 65px;
     border: 1px solid #000;
     &.active {
       color: $colorWrite;
