--- a/src/styles/checkout_page.scss
+++ b/src/styles/checkout_page.scss
@@ -53,6 +53,19 @@
 .buyer-cart {
   // display: grid;
   // gap: 30px;
+  position: relative;
+  &::after {
+    content: "";
+    position: absolute;
+    width: 110%;
+    // height: 100%;
+    bottom: 0;
+    left: -15px;
+    min-width: 284px;
+    min-height: 57px;
+    background-color: $colorPearl;
+    z-index: -1;
+  }
   &__inner {
     display: flex;
     justify-content: space-between;
@@ -61,8 +74,9 @@
     }
   }
 
-  // &__text {
-  // }
+  &__text {
+    max-width: 255px;
+  }
 
   &__list {
     display: grid;
@@ -73,6 +87,7 @@
   }
   &__item {
     display: flex;
+    gap: 10px;
     justify-content: space-between;
   }
   &__subtotal {
@@ -89,17 +104,5 @@
     justify-content: space-between;
     align-items: center;
     padding: 15px 0;
-    &::after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: -15px;
-      min-width: 284px;
-      min-height: 57px;
-      background-color: $colorPearl;
-      z-index: -1;
-    }
   }
 }
