--- a/src/components/Main/HomeShop/HomeShop.scss
+++ b/src/components/Main/HomeShop/HomeShop.scss
@@ -71,6 +71,7 @@
     position: relative;
     width: 350px;
     height: 478px;
+    background-color: rgba($color: $colorNotImages, $alpha: 0.35);
   }
   // &__img {
   // }
