--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -32,6 +32,14 @@
     display: flex;
     gap: 16px;
     align-items: flex-end;
+    position: relative;
+    & .error-message {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      bottom: -80px;
+      left: 0;
+    }
   }
 
   &__total {
@@ -51,11 +59,21 @@
   }
   &__list {
     display: flex;
-    justify-content: space-between;
+    // justify-content: space-between;
     max-width: 1000px;
   }
 
   &__item {
+    flex: 0 0 18%;
+    &:first-child {
+      flex: 1 0 46%;
+    }
+    &:nth-child(3) {
+      text-align: center;
+    }
+    &:last-child {
+      text-align: right;
+    }
   }
 
   &__text {
@@ -98,19 +116,66 @@
 .product-cart {
   &__inner {
     display: grid;
-    gap: 10px;
+    gap: 20px;
     justify-items: start;
   }
   &__item {
+    position: relative;
     max-width: 989px;
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+
+    // justify-content: flex-start;
     align-items: center;
     gap: 24px;
+
+    button svg {
+      width: 12px;
+      height: 12px;
+    }
+    p:not(.product-cart__text) {
+      flex: 1 0 17%;
+    }
+    p {
+      &:last-child:not(.product-cart__text) {
+        text-align: right;
+      }
+    }
+    &:not(:last-child) {
+      &::after {
+        content: "";
+        position: absolute;
+
+        bottom: -10px;
+        left: 0;
+        width: 100%;
+        height: 1px;
+        display: block;
+        background-color: #cdc9c9;
+      }
+    }
+  }
+  &__link {
+    flex: 1 0 35%;
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    justify-content: flex-start;
     img {
       width: 100%;
       max-width: 137px;
     }
+    & .text {
+      max-width: 240px;
+    }
+  }
+  &__input {
+    text-align: center;
+    display: flex;
+    max-width: 47px;
+    padding: 8px 0 11px;
+
+    border: 1px solid $colorQuanBorder;
+    font-weight: 400;
   }
 }
