--- a/src/components/Shop/ShopProducts/ShopProducts.scss
+++ b/src/components/Shop/ShopProducts/ShopProducts.scss
@@ -8,6 +8,7 @@
   }
   &__inner {
     display: flex;
+    align-items: start;
   }
 }
 //==========================================================================================================================================
