--- a/src/components/PopupForm/PopupForm.scss
+++ b/src/components/PopupForm/PopupForm.scss
@@ -64,6 +64,9 @@
 //==========================================================================================================================================
 .error-message {
   color: red;
+  &__color {
+    color: #18be18;
+  }
 }
 //==========================================================================================================================================
 
