--- a/src/components/ProductItem/ProductItem.scss
+++ b/src/components/ProductItem/ProductItem.scss
@@ -129,7 +129,7 @@
     border-radius: 50%;
     width: 41px;
     height: 41px;
-    border: 1px solid transparent;
+    border: 1px solid $colorQuanBorder;
   }
 }
 //==========================================================================================================================================
