--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -1,7 +1,9 @@
 .title {
   &__container {
-    padding-top: 173px;
-    padding-bottom: 84px;
+    // padding-top: 173px;
+    // padding-bottom: 84px;
+    padding-top: 30px;
+    padding-bottom: 30px;
   }
 
   &__size {
