--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -5,8 +5,8 @@
     display: grid;
   }
 
-  &__subtitle {
-  }
+  // &__subtitle {
+  // }
 
   &__inner {
     display: grid;
@@ -42,8 +42,8 @@
     }
   }
 
-  &__total {
-  }
+  // &__total {
+  // }
 }
 //==========================================================================================================================================
 
@@ -76,8 +76,8 @@
     }
   }
 
-  &__text {
-  }
+  // &__text {
+  // }
 }
 //==========================================================================================================================================
 
@@ -91,8 +91,8 @@
     gap: 20px;
   }
 
-  &__text {
-  }
+  // &__text {
+  // }
 
   &__wrap {
     display: flex;
