--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -48,6 +48,7 @@
 //==========================================================================================================================================
 
 .subtitle-cart {
+  width: 100%;
   padding-bottom: 49px;
   &::after {
     content: "";
