--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,7 +1,9 @@
 .about {
   &__container {
-    padding-top: 130px;
-    padding-bottom: 130px;
+    // padding-top: 130px;
+    // padding-bottom: 130px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     display: grid;
     justify-items: center;
     gap: 130px;
