--- a/src/components/Main/Promo/Promo.scss
+++ b/src/components/Main/Promo/Promo.scss
@@ -1,5 +1,5 @@
-@import 'swiper/scss';
-@import 'swiper/scss/autoplay';
+@import "swiper/scss";
+@import "swiper/scss/autoplay";
 
 .swiper {
   width: 100%;
@@ -8,7 +8,8 @@
 }
 .swiper-pagination {
   position: absolute;
-  left: 285px;
+
+  bottom: 80px;
   text-align: center;
   transition: 300ms opacity;
   transform: translate3d(0, 0, 0);
@@ -17,6 +18,15 @@
   justify-content: center;
   align-items: center;
   gap: 12px;
+  @media (min-width: $mobile) {
+    left: 85px;
+  }
+  @media (min-width: $tablet) {
+    left: 285px;
+  }
+  @media (min-width: $pcSmall) {
+    bottom: 190px;
+  }
   &-bullet {
     width: 30px;
     height: 4px;
@@ -49,9 +59,12 @@
     // padding-top: 120px;
     padding-bottom: 130px;
     &::after {
-      content: '';
-      width: 630px;
-      height: 826px;
+      content: "";
+      width: 100%;
+      max-width: 630px;
+      // width: 460px;
+      height: 100%;
+      // height: 826px;
       background-color: $colorPearl;
       position: absolute;
       top: -96px;
@@ -63,68 +76,122 @@
   &__swiper {
     &::before,
     &::after {
-      content: '';
-      position: absolute;
-      z-index: 3;
+      @media (min-width: $mobile) {
+        content: "";
+        position: absolute;
+        z-index: 3;
+      }
     }
     &::after {
-      width: 190px;
-      height: 318px;
-      bottom: 70px;
-      right: 310px;
-      background: url('/assets/img/home/promo_bg1.png') center / cover no-repeat;
+      width: calc(190px / 2);
+      height: calc(318px / 2);
+      bottom: 102px;
+      right: 345px;
+
+      // bottom: 70px;
+      // right: 310px;
+      background: url("/assets/img/home/promo_bg1.png") center / cover no-repeat;
+      @media (min-width: $tablet) {
+        width: 190px;
+        height: 318px;
+        bottom: 95px;
+        right: 355px;
+      }
     }
     &::before {
-      width: 197px;
-      height: 197px;
-      top: 240px;
-      right: -95px;
-      background: url('/assets/img/home/promo_bg2.png') center / cover no-repeat;
+      width: calc(197px / 2);
+      height: calc(197px / 2);
+      top: 100px;
+      right: -15px;
+      background: url("/assets/img/home/promo_bg2.png") center / cover no-repeat;
+      @media (min-width: $tablet) {
+        width: 197px;
+        height: 197px;
+        top: 240px;
+        right: -95px;
+      }
     }
   }
 
-  &__slide {
-  }
+  // &__slide {
+  //   padding: 10px;
+  //   @media (min-width: $tablet) {
+  //     padding: 0;
+  //   }
+  // }
 
   &__boby {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     max-width: 563px;
-    max-height: 385px;
+    height: 420px;
+    padding: 10px;
+    @media (min-width: $mobile) {
+      padding: 0;
+      max-height: 385px;
+      height: 100%;
+    }
   }
   &__inner {
     display: grid;
-    grid-template-columns: 1fr 440px;
-    gap: 105px;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
     align-items: center;
     justify-items: center;
+
+    @media (min-width: $tablet) {
+      gap: 105px;
+      grid-template-columns: 1fr 440px;
+    }
   }
 
   &__title {
-    max-width: 585px;
+    max-width: 260px;
     &:not(:last-child) {
       margin-bottom: 48px;
+    }
+    @media (min-width: $tablet) {
+      max-width: 585px;
     }
   }
 
   &__text {
     max-width: 385px;
     text-align: right;
-    font-size: 20px;
+    font-size: 14px;
     letter-spacing: 0.4px;
     &:not(:last-child) {
       margin-bottom: 52px;
     }
+    @media (min-width: $tablet) {
+      font-size: 20px;
+    }
   }
 
   &__img {
+    max-width: calc(434px / 1.5);
+    max-height: calc(652px / 1.5);
+    // max-width: 242px;
+    // max-height: 427px;
+    @media (min-width: $tablet) {
+      max-width: 100%;
+      max-height: 100%;
+    }
   }
   &__controller {
-    margin-left: 75px;
     max-height: 68px;
     display: flex;
+    flex-direction: row-reverse;
     justify-content: flex-start;
     align-items: flex-start;
+    @media (min-width: $tablet) {
+      margin-left: 75px;
+      flex-direction: row;
+    }
   }
   &__arrow {
+    display: none;
     & svg path,
     & svg rect {
       transition: all 0.5s ease 0s;
@@ -139,7 +206,10 @@
         }
       }
     }
+    @media (min-width: $tablet) {
+      display: block;
+    }
   }
-  &__button {
-  }
+  // &__button {
+  // }
 }
