--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,6 +2,29 @@
   // position: fixed;
   // width: 100%;
   // z-index: 10;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  min-height: 28px;
+  max-height: 90px;
+  // padding-top: 28px;
+  // padding-bottom: 41px;
+  &.scroll {
+    & .header__wrapper {
+      background-color: rgba($color: $colorWrite, $alpha: 0.95);
+      z-index: 90;
+      position: fixed;
+    }
+  }
+  &__wrapper {
+    background-color: transparent;
+    transition: background-color 0.3s ease 0s;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
   &__container {
     display: flex;
     justify-content: space-between;
@@ -9,10 +32,22 @@
     min-height: 28px;
     padding-top: 28px;
     padding-bottom: 41px;
+    gap: 15px;
+    @media (min-width: $tablet) {
+      gap: 0;
+    }
+    .scroll & {
+      padding-bottom: 28px;
+    }
     // padding: 34px 0 33px;
   }
-  // &__logo {
-  // }
+  &__logo {
+    z-index: 5;
+    flex: 1 1 auto;
+    @media (min-width: $tablet) {
+      flex: 0 0 auto;
+    }
+  }
   // &__menu {
   // }
   // &__phone {
