--- a/src/components/Main/Promo/Promo.scss
+++ b/src/components/Main/Promo/Promo.scss
@@ -8,8 +8,7 @@
 }
 .swiper-pagination {
   position: absolute;
-
-  bottom: 80px;
+  bottom: 40px;
   text-align: center;
   transition: 300ms opacity;
   transform: translate3d(0, 0, 0);
@@ -20,6 +19,7 @@
   gap: 12px;
   @media (min-width: $mobile) {
     left: 85px;
+    bottom: 80px;
   }
   @media (min-width: $tablet) {
     left: 285px;
@@ -37,14 +37,12 @@
   }
 }
 .swiper-slide {
-  background-color: $colorWrite;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .swiper-slide img {
-  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -53,30 +51,44 @@
 .promo {
   position: relative;
 
+  @media (min-width: $tablet) {
+    top: 96px;
+  }
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    max-width: 705px;
+    max-height: 826px;
+    background-color: $colorPearl;
+    position: absolute;
+    top: -96px;
+    right: 0;
+    z-index: -1;
+    @media (max-width: $mobile) {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      max-width: none;
+      background-image: url("/assets/img/home/brand2.png");
+      background-color: $colorAccentBacg;
+      background-repeat: no-repeat;
+      background-size: cover;
+      opacity: 0.8;
+      filter: blur(3px);
+    }
+  }
   &__container {
     position: relative;
     padding-top: 0;
     // padding-top: 120px;
     padding-bottom: 130px;
-    &::after {
-      content: "";
-      width: 100%;
-      max-width: 630px;
-      // width: 460px;
-      height: 100%;
-      // height: 826px;
-      background-color: $colorPearl;
-      position: absolute;
-      top: -96px;
-      right: -230px;
-      z-index: -1;
-    }
   }
 
   &__swiper {
     &::before,
     &::after {
-      @media (min-width: $mobile) {
+      @media (min-width: $pcSmall) {
         content: "";
         position: absolute;
         z-index: 3;
@@ -87,9 +99,6 @@
       height: calc(318px / 2);
       bottom: 102px;
       right: 345px;
-
-      // bottom: 70px;
-      // right: 310px;
       background: url("/assets/img/home/promo_bg1.png") center / cover no-repeat;
       @media (min-width: $tablet) {
         width: 190px;
@@ -114,10 +123,6 @@
   }
 
   // &__slide {
-  //   padding: 10px;
-  //   @media (min-width: $tablet) {
-  //     padding: 0;
-  //   }
   // }
 
   &__boby {
@@ -125,9 +130,10 @@
     flex-direction: column;
     justify-content: space-between;
     max-width: 563px;
-    height: 420px;
     padding: 10px;
+
     @media (min-width: $mobile) {
+      height: 420px;
       padding: 0;
       max-height: 385px;
       height: 100%;
@@ -135,11 +141,15 @@
   }
   &__inner {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    align-items: center;
-    justify-items: center;
+    // grid-template-columns: 1fr 1fr;
 
+    @media (min-width: $mobile) {
+      grid-template-columns: 450px 1fr;
+      width: 100%;
+      gap: 10px;
+      align-items: center;
+      justify-items: center;
+    }
     @media (min-width: $tablet) {
       gap: 105px;
       grid-template-columns: 1fr 440px;
@@ -170,13 +180,21 @@
   }
 
   &__img {
-    max-width: calc(434px / 1.5);
-    max-height: calc(652px / 1.5);
-    // max-width: 242px;
-    // max-height: 427px;
+    display: none;
+    @media (min-width: $mobile) {
+      display: flex;
+      max-width: calc(410px / 1.5);
+      max-height: calc(646px / 1.5);
+      justify-self: flex-end;
+      min-width: calc(410px / 1.5);
+      min-height: calc(646px / 1.5);
+    }
+
     @media (min-width: $tablet) {
       max-width: 100%;
       max-height: 100%;
+      min-width: 410px;
+      min-height: 646px;
     }
   }
   &__controller {
